# -

./: .gitignore  CLAUDE.md  README.md  app.js  aries-init.js  build-apk.sh  capacitor.config.json  deploy.sh  eco-client.html  eventide-server.py  eventide-start.sh  hervoice-server.py  hervoice-start.sh  index.html  manifest.json  memory. js  music-client.html  offline.html  package-lock.json  package.json  render.yaml  server.mjs  service-worker.js  start-bg.sh  start-captivity.sh  start-games.sh  start-tunnel.sh  start.sh  style-aries.css  style.css  sw.js
.claude/: settings.json  settings.local.json
API/: Adapter.js  proxy.js
Duetto/: .gitignore  Dockerfile  GUIDE.md  LICENSE  README.md  package-lock.json  package.json  start.sh
android/: gradle.properties
callhome/: .gitignore  LICENSE  README.md  README_zh.md
cedareco/: .gitignore  Dockerfile  LICENSE  README.md  build_blind.py  ecosystem.py  engine.py  requirements.txt  standalone_client.py  standalone_server.py  start.sh
eventide-tmp/: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
eventide-tmp/.github/workflows/: test.yml
eventide-tmp/docs/: default-prompts.md
eventide-tmp/examples/: custom_config.py  minimal_demo.py  quickstart.py  settlement_demo.py
eventide-tmp/src/eventide/: __init__.py  config.py  dreams.py  engine.py  models.py  prompt.py  runtime.py  serialization.py  settings.py  settlement.py  triggers.py
eventide-tmp/tests/: test_config.py  test_dreams.py  test_engine.py  test_prompt.py  test_runtime.py  test_serialization.py  test_settlement.py  test_triggers.py
(+137 files in other folders)
