[metadata]
name = eventide
version = 0.1.0
description = A body-state, dream-link, and settlement engine for AI companions.
long_description = file: README.md
long_description_content_type = text/markdown
author = Chuli
license = PolyForm Noncommercial License 1.0.0
keywords = ai-companion, body-state, physiology, dreams, settlement, prompt-engineering
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: Other/Proprietary License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src
